it still no worky

--- a/Engine KB-01/Engine KB-01/Engine KB-01.vcxproj
+++ b/Engine KB-01/Engine KB-01/Engine KB-01.vcxproj
@@ -88,12 +88,18 @@
     <ClCompile Include="CameraLoader.cpp" />
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="Heightmap.cpp" />
+    <ClCompile Include="IndexBufferWrapper.cpp" />
     <ClCompile Include="InputHandler.cpp" />
     <ClCompile Include="Kernel.cpp" />
     <ClCompile Include="KeyboardListener.cpp" />
     <ClCompile Include="Level.cpp" />
     <ClCompile Include="LevelLoader.cpp" />
     <ClCompile Include="Logger.cpp" />
+    <ClCompile Include="MaterialWrapper.cpp" />
+    <ClCompile Include="MatrixWrapper.cpp" />
+    <ClCompile Include="MeshWrapper.cpp" />
+    <ClCompile Include="TextureWrapper.cpp" />
+    <ClCompile Include="VertexBufferWrapper.cpp" />
     <ClCompile Include="VisualObject.cpp" />
     <ClCompile Include="ModelLoader.cpp" />
     <ClCompile Include="MouseListener.cpp" />
@@ -113,11 +119,18 @@
     <ClInclude Include="CameraLoader.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="Heightmap.h" />
+    <ClInclude Include="IndexBufferWrapper.h" />
     <ClInclude Include="InputHandler.h" />
     <ClInclude Include="KeyboardListener.h" />
     <ClInclude Include="Level.h" />
     <ClInclude Include="LevelLoader.h" />
     <ClInclude Include="Logger.h" />
+    <ClInclude Include="EngineKB01Definitions.h" />
+    <ClInclude Include="MaterialWrapper.h" />
+    <ClInclude Include="MatrixWrapper.h" />
+    <ClInclude Include="MeshWrapper.h" />
+    <ClInclude Include="TextureWrapper.h" />
+    <ClInclude Include="VertexBufferWrapper.h" />
     <ClInclude Include="VisualObject.h" />
     <ClInclude Include="ModelLoader.h" />
     <ClInclude Include="MouseListener.h" />
