--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ Engine KB-01/Engine KB-01.opensdf
 *.sdf
 *.suo
 *.sdf
+Engine KB-01/Engine KB-01.v12.suo
+Engine KB-01/Engine KB-01.sdf
+Engine KB-01/Engine KB-01.v12.suo
