renderer and ignores

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,10 @@ Engine KB-01/Engine KB-01.opensdf
 Engine KB-01/Engine KB-01.v12.suo
 Engine KB-01/Engine KB-01.sdf
 Engine KB-01/Engine KB-01.v12.suo
+*.sdf
+*.suo
+*.obj
+*.idb
+*.pdb
+*.log
+*.tlog
