--- a/Engine KB-01/Engine KB-01/Engine KB-01.vcxproj
+++ b/Engine KB-01/Engine KB-01/Engine KB-01.vcxproj
@@ -17,7 +17,7 @@
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <CharacterSet>Unicode</CharacterSet>
     <PlatformToolset>v120</PlatformToolset>
@@ -114,6 +114,7 @@
     <ClInclude Include="Entity.h" />
     <ClInclude Include="Heightmap.h" />
     <ClInclude Include="InputHandler.h" />
+    <ClInclude Include="Kernel.h" />
     <ClInclude Include="KeyboardListener.h" />
     <ClInclude Include="Level.h" />
     <ClInclude Include="LevelLoader.h" />
