--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 *.opensdf
 *.sdf
-*.sdf
+*.suo
 *.pdb
 *.log
 *.tlog
-.debug/
+Engine KB-01/Debug
+Engine KB-01/Engine KB-01/Debug
+Engine KB-01/Demo/Debug
+Engine KB-01/Logs
